@@ -820,6 +820,12 @@ public class WebServer {
 			}
 		}
 
+		if(TEnv.JDK_VERSION > 11) {
+			System.out.println("Your are working on: JDK-" + TEnv.JDK_VERSION + ". " +
+					"You should add java command arguments: " +
+					"--add-opens java.base/jdk.internal.misc=ALL-UNNAMED");
+		}
+
 		if(TEnv.JDK_VERSION > 14) {
 			System.out.println("Your are working on: JDK-" + TEnv.JDK_VERSION + ". " +
 					"You should add java command arguments: " +
